# Chess-Engine

./: CMakeLists.txt  LICENSE  README.md  TODO.md
.obsidian/: workspace.json
include/: bitboard.cpp  bitboard.h  bitboard.hpp  fen.cpp  fen.h  fen.hpp  magics.hpp  magics_consts.hpp  movegen.hpp  position.h  position.hpp  print.hpp
legacy/: _old_magics.cpp
src/: bitboard.cpp  fen.cpp  magics.cpp  main.cpp  movegen.cpp
